2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Get rid of "chgchar" var by just writing output first and
	    overwriting it later.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Add "output_sz" arg and check to prevent buffer overflow.
	  - Also return total written bytes for caller to check.
	* src/filterlatex.cpp (FilterLatex::Print):
	  - Adjust call accordingly.

2012-01-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Drop unnecessary vars "tmpInput" and "tmpOutput".

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust source.

	* src/filterlatex.cpp (FilterLatex::Print):
	  - Use stack array instead of heap allocation for output buffer.
	  - Merge if-cases.

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Adjust source.

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Replace hard-coded buffer size 1999 with "sizeof buffer".
	  - Get rid of "stPtr" var, which was set only once to "buffer"
	    and never changed.
	  - Declare vars where they are used.
	  - Adjust brackets & conditions.

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.h:
	  - Drop "findAmbArea()" method, which was never defined nor
	    referenced from anywhere.

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Get rid of temporary member MaxWordSeg::score.

	Its only use was in WordSegArea(), so it can be local var.

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea):
	  - Declare score as local array (no heap allocation).
	* src/maxwordseg.h, src/maxwordseg.cpp:
	  - Drop "score" new/delete.
	  - Drop now-empty d-tor.

2012-01-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Get rid of temporary member MaxWordSeg::sepIdx.

	Its only use was to pass value between CreateSentence() and